# deeptable-python

./: .gitignore  .stats.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  api.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  release-doctor.yml
examples/agentic-question-answering/: AGENTS.md  README.md  ask_question.py  convert_workbook_to_structured_sheet.py  pyproject.toml
scripts/: lint
scripts/utils/: upload-artifact.sh
src/deeptable/: __init__.py  _base_client.py  _client.py  _exceptions.py  _files.py  _resource.py  _response.py  _streaming.py  _types.py  _version.py
src/deeptable/resources/: files.py
src/deeptable/resources/structured_sheets/: __init__.py  exports.py  structured_sheets.py  tables.py
src/deeptable/types/: __init__.py  file.py  file_delete_response.py  file_list_params.py  file_list_response.py  structured_sheet_delete_response.py  structured_sheet_list_params.py  structured_sheet_list_response.py  structured_sheet_response.py  structured_sheets_response.py
src/deeptable/types/structured_sheets/: __init__.py  table_download_params.py  table_list_params.py  table_list_response.py  table_response.py
tests/: conftest.py  test_client.py  test_extract_files.py  test_files.py  test_response.py  test_streaming.py
tests/api_resources/: test_files.py  test_structured_sheets.py
tests/api_resources/structured_sheets/: test_exports.py  test_tables.py
tests/test_utils/: test_path.py
